RegressionTests/TestSuiteExport/reject/unexpected_token.blade
// EXPECT: fail
// DIAGNOSTICS: UnexpectedToken

fn () { }